# yaws

./: .gitignore  .travis.yml  CHANGELOG  ChangeLog  LICENSE  Makefile  Makefile.am  README  README.cygwin  README.md  README.osx  README.pkg-config  README.release  README.win32-cygwin  SECURITY.md  TODO  _build.cfg  config.guess  config.sub  configure  configure.ac  configure.in  dialyzer_checker  erlang_deps.mk  examples.mk  include.mk  include.mk.in  index.html  known_dialyzer_warnings  rebar.config  rebar.config.script  rebar_reltool_link.erl  two-mode-mode.el  vsn.mk  yaws.pc.in  yaws.rel.src
applications/chat/: Makefile  Makefile.am  include.mk
applications/mail/: Makefile.am  README  TODO  include.mk  vsn.mk
applications/wiki/: Makefile  Makefile.am  README  include.mk  start.sh  updateWiki.sh  wiki.conf
applications/yapp/: Makefile  Makefile.am  README  vsn.mk
c_src/: Makefile  Makefile.am  epam.c  hashtable.c  hashtable_private.h  setuid_drv.c  yaws_sendfile_drv.c
doc/: Makefile  Makefile.am  README.rss  a.eps  b.eps  layout.eps  overview.edoc  yaws.tex  yaws_head.eps
ebin_src/: Makefile.am
man/: Makefile  Makefile.am  yaws.1  yaws.conf.5  yaws_api.5  yaws_soap_lib.5
scripts/: Install  Makefile  Makefile.am  Subst  gen-release-news  gen-yaws  gen-yaws-conf  gen-yaws-generated  gen-yaws-generated.in  gitlog-to-changelog  local-install  make-release  make-release.in  make-upload  mangle  ntpath.sh  rebar-pre-script  regular-install  update-gh-pages  upload-travis-build-artifacts  yaws.conf  yaws.conf.basic_auth  yaws.conf.template  yaws.conf.template.local  yaws.init.d  yaws.ss  yaws.template
scripts/darwin/: README  Yaws.StartupItem  Yaws.plist
scripts/debian/: yaws.init  yaws.init.d
scripts/freebsd/: yaws  yaws.sh
scripts/gentoo/: conf.d.yaws  init.d.yaws  yaws-2.0.2.ebuild  yaws.ebuild  yaws.init
scripts/netbsd/: yaws.sh
scripts/openbsd/: yaws.sh
scripts/redhat/: yaws.init  yaws.init.d
scripts/suse/: yaws.init  yaws.init.d
scripts/systemd/: yaws.service
src/: Makefile  Makefile.am  advanced_echo_callback.erl  authmod_gssapi.erl  dav.erl  haxe.erl  json.erl  json2.erl  jsonrpc.erl  mime.types  mime_type_c.erl  yaws.app.src  yaws.app.src.script  yaws.appup.src  yaws.conf  yaws.erl  yaws.hrl  yaws_404.erl  yaws_api.erl  yaws_app.erl  yaws_appdeps.hrl.in  yaws_appmod_cgi.erl  yaws_appmod_dav.erl  yaws_appmod_fcgi.erl  yaws_cgi.erl  yaws_charset.hrl.in  yaws_compile.erl  yaws_config.erl  yaws_content_negotiation.erl  yaws_ctl.erl  yaws_dav.erl  yaws_davlock.erl  yaws_debug.erl  yaws_debug.hrl  yaws_dime.erl  yaws_dynopts.erl  yaws_exhtml.erl  yaws_generated.template  yaws_html.erl  yaws_jsonrpc.erl  (+36 more)
src/benchmarks/: README  all.erl  bench.erl  bench.hrl  conc_path_bm.erl
src/contrib/: yaws_mnesia_session.erl
src/patches/: README  dos-http-header.patch
test/: Makefile  Makefile.am  README  README.md  auth_SUITE.erl  config_encoding_SUITE.erl  cookies_SUITE.erl  copy_error_log_SUITE.erl  deflate_SUITE.erl  dhfile_SUITE.erl  dynopts_SUITE.erl  ehtml_SUITE.erl  gconf_SUITE.erl  headers_SUITE.erl  host_header_SUITE.erl  ipmask_SUITE.erl  json2_SUITE.erl  jsonrpc_SUITE.erl  main_SUITE.erl  maxconn_SUITE.erl  mime_types_SUITE.erl  multipart_post_parsing_SUITE.erl  no_docroot_SUITE.erl  proc_cleanup_SUITE.erl  redirect_SUITE.erl  revproxy_SUITE.erl  rss_startup_SUITE.erl  run_common_test.in  sconf_SUITE.erl  srcdir_SUITE.erl  ssl_sni_SUITE.erl  subconfig_SUITE.erl  testsuite.erl  testsuite.hrl.in  trace_cycle_SUITE.erl  webdav_SUITE.erl  websockets_SUITE.erl  yaws_api_SUITE.erl  yaws_compile_SUITE.erl  yaws_ls_SUITE.erl  (+2 more)
test/1.4.1/: BSD_LICENSE  README  vsn.mk
test/auth_SUITE_data/: authmodtest.erl  rewritetest.erl
test/conf/: authconf.conf  davconf.conf  deflate.conf  mimetypes.conf  no_docroot_appmod.conf  no_docroot_fwdproxy.conf  no_docroot_redirect.conf  no_docroot_revproxy.conf  redirectconf.conf  revproxy.conf  revproxyconf.conf  srcdirconf.conf  stdconf.conf  websocketconf.conf  yaws.conf
test/cookies_SUITE_data/: cookies.dump
test/deflate_SUITE_data/: smalltest.erl
test/eunit/: Makefile  Makefile.am  cookies.erl  copy_error_log.erl  dynopts.erl  ehtml_test.erl  embedded_yaws_id_dir.erl  gconf.erl  headers.erl  ipmask.erl  json2_decode.erl  multipart_post_parsing.erl  proc_cleanup.erl  sconf.erl  setcookies.dump  subconfig.erl  yaws_api_test.erl  yaws_ls_tests.erl  yaws_rpc_test.erl  yaws_session_server_test.erl
test/ibrowse/: LICENSE
test/include/: tftest.hrl
test/main_SUITE_data/: appmod_strip_undefined_bindings.erl  appmod_with_yssi.erl  appmod_with_yssi_strip_undefined_bindings.erl  cache_appmod_test.erl  flushtest.erl  forwarded_for_test.erl  phptest.erl  policies.erl  posttest.erl  status.erl
test/redirect_SUITE_data/: bad_redirect3.conf  bad_redirect4.conf
test/revproxy_SUITE_data/: intercept1.erl  rewritetest.erl  streamtest.erl
test/src/: Makefile  Makefile.am  httpc.erl  test.erl  tftest.erl
test/support/: include.mk  include.mk.in  include.sh  include.sh.in  wait_started.sh  yaws.conf.in
test/t1/: Makefile  Makefile.am  runtest  wgettest  yaws.conf.in
test/t10/: Makefile  (+2 more)
testsuite/: Makefile.am  README.md  analyze_coverdata.escript.in  auth_SUITE.erl  config_encoding_SUITE.erl  cookies_SUITE.erl  copy_error_log_SUITE.erl  cover_to_html.sh.in  deflate_SUITE.erl  dhfile_SUITE.erl  dynopts_SUITE.erl  ehtml_SUITE.erl  gconf_SUITE.erl  headers_SUITE.erl  host_header_SUITE.erl  ipmask_SUITE.erl  json2_SUITE.erl  jsonrpc_SUITE.erl  main_SUITE.erl  maxconn_SUITE.erl  mime_types_SUITE.erl  multipart_post_parsing_SUITE.erl  no_docroot_SUITE.erl  proc_cleanup_SUITE.erl  redirect_SUITE.erl  revproxy_SUITE.erl  run_common_test.in  sconf_SUITE.erl  srcdir_SUITE.erl  ssl_sni_SUITE.erl  subconfig_SUITE.erl  testsuite.erl  testsuite.hrl.in  webdav_SUITE.erl  websockets_SUITE.erl  yaws.coverspec.in  yaws_api_SUITE.erl  yaws_compile_SUITE.erl  yaws_ls_SUITE.erl  yaws_rpc_SUITE.erl  (+1 more)
win32/: Makefile  Makefile.am  README.developer  README.txt  build.xml.in  include.mk  license.xml  mkinstaller.sh  yaws.c  yaws.conf
(+738 files in other folders)
